[Update] Change Alert Massage

--- a/index.html
+++ b/index.html
@@ -150,10 +150,9 @@
       ga('send', 'pageview');
 
       function CheckDownloadDurangoV2() {
-        if (confirm("전투 시스템 등의 추가적인 기능은 https://github.com/KylloxStudio/Durango_V2를 참고해주세요 (PC 전용) - Kyllox")) {
-          window.open('https://drive.google.com/file/d/1CpxREFRVtQsZonzq0TZeuiv9cBzHojSx/view?usp=sharing', '_blank');
-          window.open('https://github.com/KylloxStudio/Durango_V2', '_blank');
-        }
+        window.alert("전투 시스템 등의 추가적인 기능은 https://github.com/KylloxStudio/Durango_V2를 참고해주세요 (PC 전용) - Kyllox");
+        window.open('https://drive.google.com/file/d/1CpxREFRVtQsZonzq0TZeuiv9cBzHojSx/view?usp=sharing', '_blank');
+        window.open('https://github.com/KylloxStudio/Durango_V2', '_blank');
       }
   </script>
 </html>
